# omni

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION-STATUS.md  CONFIGURATION.md  CONTRIBUTING.md  CORRECTED-COMPLETION-STATUS.md  Cargo.toml  DEPLOYMENT-STRATEGY.md  DOCUMENTATION-INDEX.md  Dockerfile  FINAL-HANDOVER.md  HONEST-STATUS-ASSESSMENT.md  LAUNCH_STRATEGY.md  Makefile  PACKAGE_DISCOVERY_EVALUATION.md  PRODUCTION-READINESS-REPORT.md  PROJECT-OVERVIEW.md  QUICK-START.md  README-VERSIONS.md  README.md  SECURITY.md  SECURITY_FIX_GUIDE.md  TESTING.md  _config.yml  build-all.sh  clean_commits.sh  clean_history_v2.sh  clippy.toml  deny.toml  dev.nix  fix_git_history.sh  index.md  install-core.sh  install-enterprise.sh  install-lite.sh  manual_clean.sh  omni.manifest.yaml  package.json  robots.txt  (+2 more)
.github/: FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  package_manager_support.yml
.github/workflows/: build.yml  ci.yml  release.yml  update-topics.yml
.idx/: dev.nix
_layouts/: default.html
benches/: performance.rs
deploy/: staging-config.yml
docs/: MIGRATION-GUIDE.md  VERSION-COMPARISON.md  git-hooks.md  installation-guide.md  user-guide.md
omni-packages/: README.md
omni-packages/.github/workflows/: update-data.yml
omni-packages/docs/: CONTRIBUTING.md
omni-packages/scripts/: generate-api.py  validate.py
scripts/: build.sh  staging-test.sh  validate-production-readiness.sh
src/: advanced_resolver.rs  advanced_resolver_v2.rs  audit.rs  brain.rs  branding.rs  config.rs  database.rs  distro.rs  docker.rs  error_handling.rs  gui.rs  hardware.rs  history.rs  input_validation.rs  interactive.rs  lib.rs  logging.rs  main.rs  manifest.rs  package_discovery.rs  privilege_manager.rs  rate_limiter.rs  resolver.rs  runtime.rs  sandboxing.rs  search.rs  search.rs.backup  secure_brain.rs  secure_brain_v2.rs  secure_executor.rs  security.rs  server.rs  snapshot.rs  ssh.rs  ssh_real.rs  testing.rs  transaction.rs  transaction_v2.rs  types.rs  unified_manager.rs  (+1 more)
src-tauri/: tauri.conf.json
src-tauri/web_src/: index.html
src/boxes/: appimage.rs  apt.rs  brew.rs  chocolatey.rs  dnf.rs  emerge.rs  flatpak.rs  mas.rs  mod.rs  nix.rs  pacman.rs  scoop.rs  snap.rs  winget.rs  zypper.rs
tests/: basic_functionality_test.sh  comprehensive_tests.rs  integration_tests.rs  ssh_tests.rs  unit_tests.rs
tests/data/: test_manifest.yaml
web-app/: README.md  package-lock.json  package-lock.json.backup  package.json  package.json.backup
web-app/public/: index.html
web-app/src/: App.css  App.jsx  index.js  theme.css
web-app/src/components/: Sidebar.css  Sidebar.jsx
web-app/src/pages/: Dashboard.css  Dashboard.jsx  ProfilePage.jsx  TimelinePage.jsx
web-app/src/tests/: cspHeader.test.js  dompurifyUsage.test.js  profilePage.security.test.js  security.test.js
web-app/src/utils/: api.js  validation.js
