[package]
name = "omni"
version = "0.2.0"
edition = "2021"
authors = ["therealcoolnerd"]
license = "AGPL-3.0-or-later"
description = "Universal Cross-Platform Package Manager - Unify Linux, Windows, and macOS package management"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
eframe = { version = "0.31", features = ["default"] }
egui_extras = { version = "0.31", features = ["default"] }
rfd = "0.15"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
dialoguer = "0.11"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tempfile = "3.0"
zip = "2.1"
tar = "0.4"
flate2 = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
semver = "1.0"
tracing-appender = "0.2"
regex = "1.10"
url = "2.5"
libc = "0.2"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
tokio-test = "0.4"

[[bench]]
name = "performance"
harness = false

[lib]
name = "omni"
path = "src/lib.rs"

